change toolbartheme color and make add happy place layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HappyPlacesApp">
-        <activity android:name=".MainActivity">
+        <activity android:name=".AddHappyPlaceActivity"
+            android:screenOrientation="portrait"
+            android:label="ADD HAPPY Place"></activity>
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
