final commit isa

--- a/local.properties
+++ b/local.properties
@@ -8,3 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 sdk.dir=/Users/shaimaa/Library/Android/sdk
+MAPS_API_KEY=AIzaSyCio8EK8S4g0xfvWIruP9QNU2sA4otdMtY
