--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,22 @@ plugins {
 }
 
 android {
+    defaultConfig {
+        // ...
+        // Set the properties within `local.properties` into a `Properties` class so that values
+        // within `local.properties` (e.g. Maps API key) are accessible in this file.
+        Properties properties = new Properties()
+        if (rootProject.file("local.properties").exists()) {
+            properties.load(rootProject.file("local.properties").newDataInputStream())
+        }
+
+        // Inject the Maps API key into the manifest
+        manifestPlaceholders = [ mapsApiKey : properties.getProperty("MAPS_API_KEY", "") ]
+    }
+}
+
+
+android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
